Completação do projeto da primeira aula

--- a/Aula 1/Arquivo Inicial - Aula 1.ipynb
+++ b/Aula 1/Arquivo Inicial - Aula 1.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,8 @@
     "pyautogui.click(x=1347, y=859)\n",
     "sleep(5)\n",
     "pyautogui.click(x=1433, y=914)\n",
-    "sleep(10)"
+    "sleep(10)\n",
+    "pyautogui.hotkey('ctrl', 'w')"
    ]
   },
   {
@@ -60,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -241,13 +242,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2917311 15227\n"
-     ]
     }
    ],
    "source": [
@@ -271,11 +265,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Passo 4 - Enviar um email para a diretoria com os indicadores"
+    "# Passo 4 - Enviar um email para a diretoria com os indicadores\n",
+    "pyautogui.hotkey('ctrl', 't')\n",
+    "pyperclip.copy('https://mail.google.com/mail/u/2/')\n",
+    "pyautogui.hotkey('ctrl', 'v')\n",
+    "pyautogui.press('enter')\n",
+    "sleep(5)\n",
+    "\n",
+    "pyautogui.click(x=133, y=260)\n",
+    "pyautogui.write('william.costa.profissional@gmail.com')\n",
+    "pyautogui.press('tab')\n",
+    "pyautogui.hotkey('tab')\n",
+    "pyperclip.copy('Relatório')\n",
+    "pyautogui.hotkey('ctrl', 'v')\n",
+    "pyautogui.press('tab')\n",
+    "\n",
+    "texto = f'''Prezados,\n",
+    "\n",
+    "A seguir, o relatório de vendas da nossas lojas!\n",
+    "\n",
+    "A quantidade de produtos vendidos foi de {produtos_vendidos} unidades.\n",
+    "O faturamento foi de R${faturamento:,.2f}.\n",
+    "\n",
+    "Atenciosamente,\n",
+    "William de Sousa'''\n",
+    "\n",
+    "pyperclip.copy(texto)\n",
+    "pyautogui.hotkey('ctrl', 'v')\n",
+    "sleep(5)\n",
+    "pyautogui.hotkey('ctrl', 'enter')\n",
+    "pyautogui.hotkey('ctrl', 'w')\n"
    ]
   },
   {
@@ -289,22 +312,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Point(x=1433, y=914)"
+       "Point(x=133, y=260)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sleep(20)\n",
+    "sleep(10)\n",
     "pyautogui.position()"
    ]
   }
