--- a/Aula 3/Arquivo Inicial - Aula 3.ipynb
+++ b/Aula 3/Arquivo Inicial - Aula 3.ipynb
@@ -46,12 +46,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# importando o selenium\n",
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.common.keys import Keys\n",
+    "from selenium.webdriver.common.by import By\n",
+    "\n",
+    "# abrindo navegador\n",
+    "navegador = webdriver.Chrome()\n",
+    "\n",
+    "# dolar\n",
+    "navegador.get('https://www.google.com/')\n",
+    "\n",
+    "navegador.find_element(by=By.XPATH, value='/html/body/div[1]/div[3]/form/div[1]/div[1]/div[1]/div/div[2]/input').send_keys('cotação dolar')\n",
+    "\n",
+    "navegador.find_element(by=By.XPATH, value='/html/body/div[1]/div[3]/form/div[1]/div[1]/div[1]/div/div[2]/input').send_keys(Keys.ENTER)\n",
+    "\n",
+    "cotacao_dolar = float(navegador.find_element(by=By.XPATH, value='//*[@id=\"knowledge-currency__updatable-data-column\"]/div[1]/div[2]/span[1]').get_attribute('data-value'))\n",
+    "\n",
+    "# euro\n",
+    "navegador.get('https://www.google.com/')\n",
+    "\n",
+    "navegador.find_element(by=By.XPATH, value='/html/body/div[1]/div[3]/form/div[1]/div[1]/div[1]/div/div[2]/input').send_keys('cotação euro')\n",
+    "\n",
+    "navegador.find_element(by=By.XPATH, value='/html/body/div[1]/div[3]/form/div[1]/div[1]/div[1]/div/div[2]/input').send_keys(Keys.ENTER)\n",
+    "\n",
+    "cotacao_euro = float(navegador.find_element(by=By.XPATH, value='//*[@id=\"knowledge-currency__updatable-data-column\"]/div[1]/div[2]/span[1]').get_attribute('data-value'))\n",
+    "\n",
+    "# ouro\n",
+    "navegador.get('https://dolarhoje.com/ouro-hoje/')\n",
+    "\n",
+    "cotacao_ouro = float(navegador.find_element(by=By.XPATH, value='//*[@id=\"nacional\"]').get_attribute('value').replace(',', '.'))\n",
+    "\n",
+    "navegador.quit()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -62,10 +95,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Produtos</th>\n",
+       "      <th>Preço Original</th>\n",
+       "      <th>Moeda</th>\n",
+       "      <th>Cotação</th>\n",
+       "      <th>Preço de Compra</th>\n",
+       "      <th>Margem</th>\n",
+       "      <th>Preço de Venda</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Câmera Canon</td>\n",
+       "      <td>999.99</td>\n",
+       "      <td>Dólar</td>\n",
+       "      <td>5.040300</td>\n",
+       "      <td>5040.249597</td>\n",
+       "      <td>1.40</td>\n",
+       "      <td>7056.349436</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Carro Renault</td>\n",
+       "      <td>4500.00</td>\n",
+       "      <td>Euro</td>\n",
+       "      <td>5.591961</td>\n",
+       "      <td>25163.823758</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>50327.647515</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Notebook Dell</td>\n",
+       "      <td>899.99</td>\n",
+       "      <td>Dólar</td>\n",
+       "      <td>5.040300</td>\n",
+       "      <td>4536.219597</td>\n",
+       "      <td>1.70</td>\n",
+       "      <td>7711.573315</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>IPhone</td>\n",
+       "      <td>799.00</td>\n",
+       "      <td>Dólar</td>\n",
+       "      <td>5.040300</td>\n",
+       "      <td>4027.199700</td>\n",
+       "      <td>1.70</td>\n",
+       "      <td>6846.239490</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Carro Fiat</td>\n",
+       "      <td>3000.00</td>\n",
+       "      <td>Euro</td>\n",
+       "      <td>5.591961</td>\n",
+       "      <td>16775.882505</td>\n",
+       "      <td>1.90</td>\n",
+       "      <td>31874.176760</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Celular Xiaomi</td>\n",
+       "      <td>480.48</td>\n",
+       "      <td>Dólar</td>\n",
+       "      <td>5.040300</td>\n",
+       "      <td>2421.763344</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>4843.526688</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Joia 20g</td>\n",
+       "      <td>20.00</td>\n",
+       "      <td>Ouro</td>\n",
+       "      <td>317.830000</td>\n",
+       "      <td>6356.600000</td>\n",
+       "      <td>1.15</td>\n",
+       "      <td>7310.090000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Produtos  Preço Original  Moeda     Cotação  Preço de Compra  Margem  \\\n",
+       "0    Câmera Canon          999.99  Dólar    5.040300      5040.249597    1.40   \n",
+       "1   Carro Renault         4500.00   Euro    5.591961     25163.823758    2.00   \n",
+       "2   Notebook Dell          899.99  Dólar    5.040300      4536.219597    1.70   \n",
+       "3          IPhone          799.00  Dólar    5.040300      4027.199700    1.70   \n",
+       "4      Carro Fiat         3000.00   Euro    5.591961     16775.882505    1.90   \n",
+       "5  Celular Xiaomi          480.48  Dólar    5.040300      2421.763344    2.00   \n",
+       "6        Joia 20g           20.00   Ouro  317.830000      6356.600000    1.15   \n",
+       "\n",
+       "   Preço de Venda  \n",
+       "0     7056.349436  \n",
+       "1    50327.647515  \n",
+       "2     7711.573315  \n",
+       "3     6846.239490  \n",
+       "4    31874.176760  \n",
+       "5     4843.526688  \n",
+       "6     7310.090000  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "tabela = pd.read_excel('Produtos.xlsx')\n",
+    "\n",
+    "tabela['Cotação'] = tabela['Cotação'].astype(float)\n",
+    "\n",
+    "tabela.loc[tabela['Moeda'] == 'Dólar', 'Cotação'] = float(cotacao_dolar)\n",
+    "tabela.loc[tabela['Moeda'] == 'Euro', 'Cotação'] = float(cotacao_euro)\n",
+    "tabela.loc[tabela['Moeda'] == 'Ouro', 'Cotação'] = float(cotacao_ouro)\n",
+    "\n",
+    "tabela['Preço de Compra'] = tabela['Preço Original'] * tabela['Cotação']\n",
+    "\n",
+    "tabela['Preço de Venda'] = tabela['Preço de Compra'] * tabela['Margem']\n",
+    "\n",
+    "display(tabela)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -76,15 +254,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "tabela.to_excel('Produtos Novo.xlsx', index=False)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -98,7 +278,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
