--- a/Aula 3/Gabarito - Aula 3.ipynb
+++ b/Aula 3/Gabarito - Aula 3.ipynb
@@ -25,16 +25,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.0127999999999995\n",
-      "5.5485079100000005\n",
-      "321.86\n"
+      "5.1572\n",
+      "5.6491999999999996\n"
+     ]
+    },
+    {
+     "ename": "NoSuchWindowException",
+     "evalue": "Message: no such window: target window already closed\nfrom unknown error: web view not found\n  (Session info: chrome=99.0.4844.51)\nStacktrace:\n#0 0x5564b51997d3 <unknown>\n#1 0x5564b4ef5688 <unknown>\n#2 0x5564b4ed53ec <unknown>\n#3 0x5564b4f4cc9b <unknown>\n#4 0x5564b4f5c0c5 <unknown>\n#5 0x5564b4f495a3 <unknown>\n#6 0x5564b4f1eddc <unknown>\n#7 0x5564b4f1fde5 <unknown>\n#8 0x5564b51ca49d <unknown>\n#9 0x5564b51e360c <unknown>\n#10 0x5564b51cc205 <unknown>\n#11 0x5564b51e3ee5 <unknown>\n#12 0x5564b51c0070 <unknown>\n#13 0x5564b51ff488 <unknown>\n#14 0x5564b51ff60c <unknown>\n#15 0x5564b5218c6d <unknown>\n#16 0x7fdeffe61609 <unknown>\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNoSuchWindowException\u001b[0m                     Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_10700/126180994.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     41\u001b[0m \u001b[0mnavegador\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"https://www.melhorcambio.com/ouro-hoje\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     42\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 43\u001b[0;31m \u001b[0mcotacao_ouro\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnavegador\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind_element\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mBy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mXPATH\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'//*[@id=\"comercial\"]'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_attribute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"value\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     44\u001b[0m \u001b[0mcotacao_ouro\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcotacao_ouro\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\",\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\".\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     45\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcotacao_ouro\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.9/site-packages/selenium/webdriver/remote/webdriver.py\u001b[0m in \u001b[0;36mfind_element\u001b[0;34m(self, by, value)\u001b[0m\n\u001b[1;32m   1246\u001b[0m             \u001b[0mvalue\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'[name=\"%s\"]'\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1247\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1248\u001b[0;31m         return self.execute(Command.FIND_ELEMENT, {\n\u001b[0m\u001b[1;32m   1249\u001b[0m             \u001b[0;34m'using'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mby\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1250\u001b[0m             'value': value})['value']\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.9/site-packages/selenium/webdriver/remote/webdriver.py\u001b[0m in \u001b[0;36mexecute\u001b[0;34m(self, driver_command, params)\u001b[0m\n\u001b[1;32m    423\u001b[0m         \u001b[0mresponse\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcommand_executor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdriver_command\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    424\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mresponse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 425\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0merror_handler\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcheck_response\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresponse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    426\u001b[0m             response['value'] = self._unwrap_value(\n\u001b[1;32m    427\u001b[0m                 response.get('value', None))\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.9/site-packages/selenium/webdriver/remote/errorhandler.py\u001b[0m in \u001b[0;36mcheck_response\u001b[0;34m(self, response)\u001b[0m\n\u001b[1;32m    245\u001b[0m                 \u001b[0malert_text\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'alert'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'text'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    246\u001b[0m             \u001b[0;32mraise\u001b[0m \u001b[0mexception_class\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmessage\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mscreen\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstacktrace\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0malert_text\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# type: ignore[call-arg]  # mypy is not smart enough here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 247\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mexception_class\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmessage\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mscreen\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstacktrace\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    248\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    249\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_value_or_default\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mobj\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mMapping\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0m_KT\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_VT\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0m_KT\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdefault\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0m_VT\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0m_VT\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNoSuchWindowException\u001b[0m: Message: no such window: target window already closed\nfrom unknown error: web view not found\n  (Session info: chrome=99.0.4844.51)\nStacktrace:\n#0 0x5564b51997d3 <unknown>\n#1 0x5564b4ef5688 <unknown>\n#2 0x5564b4ed53ec <unknown>\n#3 0x5564b4f4cc9b <unknown>\n#4 0x5564b4f5c0c5 <unknown>\n#5 0x5564b4f495a3 <unknown>\n#6 0x5564b4f1eddc <unknown>\n#7 0x5564b4f1fde5 <unknown>\n#8 0x5564b51ca49d <unknown>\n#9 0x5564b51e360c <unknown>\n#10 0x5564b51cc205 <unknown>\n#11 0x5564b51e3ee5 <unknown>\n#12 0x5564b51c0070 <unknown>\n#13 0x5564b51ff488 <unknown>\n#14 0x5564b51ff60c <unknown>\n#15 0x5564b5218c6d <unknown>\n#16 0x7fdeffe61609 <unknown>\n"
      ]
     }
    ],
@@ -104,140 +117,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Produtos</th>\n",
-       "      <th>Preço Original</th>\n",
-       "      <th>Moeda</th>\n",
-       "      <th>Cotação</th>\n",
-       "      <th>Preço de Compra</th>\n",
-       "      <th>Margem</th>\n",
-       "      <th>Preço de Venda</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Câmera Canon</td>\n",
-       "      <td>999.99</td>\n",
-       "      <td>Dólar</td>\n",
-       "      <td>5</td>\n",
-       "      <td>4999.95</td>\n",
-       "      <td>1.40</td>\n",
-       "      <td>6999.930</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Carro Renault</td>\n",
-       "      <td>4500.00</td>\n",
-       "      <td>Euro</td>\n",
-       "      <td>6</td>\n",
-       "      <td>27000.00</td>\n",
-       "      <td>2.00</td>\n",
-       "      <td>54000.000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Notebook Dell</td>\n",
-       "      <td>899.99</td>\n",
-       "      <td>Dólar</td>\n",
-       "      <td>5</td>\n",
-       "      <td>4499.95</td>\n",
-       "      <td>1.70</td>\n",
-       "      <td>7649.915</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>IPhone</td>\n",
-       "      <td>799.00</td>\n",
-       "      <td>Dólar</td>\n",
-       "      <td>5</td>\n",
-       "      <td>3995.00</td>\n",
-       "      <td>1.70</td>\n",
-       "      <td>6791.500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Carro Fiat</td>\n",
-       "      <td>3000.00</td>\n",
-       "      <td>Euro</td>\n",
-       "      <td>6</td>\n",
-       "      <td>18000.00</td>\n",
-       "      <td>1.90</td>\n",
-       "      <td>34200.000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Celular Xiaomi</td>\n",
-       "      <td>480.48</td>\n",
-       "      <td>Dólar</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2402.40</td>\n",
-       "      <td>2.00</td>\n",
-       "      <td>4804.800</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Joia 20g</td>\n",
-       "      <td>20.00</td>\n",
-       "      <td>Ouro</td>\n",
-       "      <td>350</td>\n",
-       "      <td>7000.00</td>\n",
-       "      <td>1.15</td>\n",
-       "      <td>8050.000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         Produtos  Preço Original  Moeda  Cotação  Preço de Compra  Margem  \\\n",
-       "0    Câmera Canon          999.99  Dólar        5          4999.95    1.40   \n",
-       "1   Carro Renault         4500.00   Euro        6         27000.00    2.00   \n",
-       "2   Notebook Dell          899.99  Dólar        5          4499.95    1.70   \n",
-       "3          IPhone          799.00  Dólar        5          3995.00    1.70   \n",
-       "4      Carro Fiat         3000.00   Euro        6         18000.00    1.90   \n",
-       "5  Celular Xiaomi          480.48  Dólar        5          2402.40    2.00   \n",
-       "6        Joia 20g           20.00   Ouro      350          7000.00    1.15   \n",
-       "\n",
-       "   Preço de Venda  \n",
-       "0        6999.930  \n",
-       "1       54000.000  \n",
-       "2        7649.915  \n",
-       "3        6791.500  \n",
-       "4       34200.000  \n",
-       "5        4804.800  \n",
-       "6        8050.000  "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Passo 4: Importar a lista de produtos\n",
     "import pandas as pd\n",
@@ -255,140 +139,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Produtos</th>\n",
-       "      <th>Preço Original</th>\n",
-       "      <th>Moeda</th>\n",
-       "      <th>Cotação</th>\n",
-       "      <th>Preço de Compra</th>\n",
-       "      <th>Margem</th>\n",
-       "      <th>Preço de Venda</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Câmera Canon</td>\n",
-       "      <td>999.99</td>\n",
-       "      <td>Dólar</td>\n",
-       "      <td>5.012800</td>\n",
-       "      <td>5012.749872</td>\n",
-       "      <td>1.40</td>\n",
-       "      <td>7017.849821</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Carro Renault</td>\n",
-       "      <td>4500.00</td>\n",
-       "      <td>Euro</td>\n",
-       "      <td>5.548508</td>\n",
-       "      <td>24968.285595</td>\n",
-       "      <td>2.00</td>\n",
-       "      <td>49936.571190</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Notebook Dell</td>\n",
-       "      <td>899.99</td>\n",
-       "      <td>Dólar</td>\n",
-       "      <td>5.012800</td>\n",
-       "      <td>4511.469872</td>\n",
-       "      <td>1.70</td>\n",
-       "      <td>7669.498782</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>IPhone</td>\n",
-       "      <td>799.00</td>\n",
-       "      <td>Dólar</td>\n",
-       "      <td>5.012800</td>\n",
-       "      <td>4005.227200</td>\n",
-       "      <td>1.70</td>\n",
-       "      <td>6808.886240</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Carro Fiat</td>\n",
-       "      <td>3000.00</td>\n",
-       "      <td>Euro</td>\n",
-       "      <td>5.548508</td>\n",
-       "      <td>16645.523730</td>\n",
-       "      <td>1.90</td>\n",
-       "      <td>31626.495087</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Celular Xiaomi</td>\n",
-       "      <td>480.48</td>\n",
-       "      <td>Dólar</td>\n",
-       "      <td>5.012800</td>\n",
-       "      <td>2408.550144</td>\n",
-       "      <td>2.00</td>\n",
-       "      <td>4817.100288</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Joia 20g</td>\n",
-       "      <td>20.00</td>\n",
-       "      <td>Ouro</td>\n",
-       "      <td>321.860000</td>\n",
-       "      <td>6437.200000</td>\n",
-       "      <td>1.15</td>\n",
-       "      <td>7402.780000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         Produtos  Preço Original  Moeda     Cotação  Preço de Compra  Margem  \\\n",
-       "0    Câmera Canon          999.99  Dólar    5.012800      5012.749872    1.40   \n",
-       "1   Carro Renault         4500.00   Euro    5.548508     24968.285595    2.00   \n",
-       "2   Notebook Dell          899.99  Dólar    5.012800      4511.469872    1.70   \n",
-       "3          IPhone          799.00  Dólar    5.012800      4005.227200    1.70   \n",
-       "4      Carro Fiat         3000.00   Euro    5.548508     16645.523730    1.90   \n",
-       "5  Celular Xiaomi          480.48  Dólar    5.012800      2408.550144    2.00   \n",
-       "6        Joia 20g           20.00   Ouro  321.860000      6437.200000    1.15   \n",
-       "\n",
-       "   Preço de Venda  \n",
-       "0     7017.849821  \n",
-       "1    49936.571190  \n",
-       "2     7669.498782  \n",
-       "3     6808.886240  \n",
-       "4    31626.495087  \n",
-       "5     4817.100288  \n",
-       "6     7402.780000  "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Passo 5: Recalcular o preço de cada produto\n",
     "# atualizar a cotação\n",
@@ -417,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
